@@ -1,5 +1,5 @@
 #Properties of this specific CALIPH build
-#Sat, 20 Apr 2013 19:02:59 +0200
+#Sun, 21 Apr 2013 20:36:59 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -44,5 +44,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/04/20 19\:02
-build-number=173
+build-date=2013/04/21 20\:36
+build-number=174
